--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "body-parser": "^2.2.0",
     "express": "^5.1.0"
+  },
+  "scripts": {
+    "dev": "bun main.js"
   }
 }
